--- a/src/theme/index.css
+++ b/src/theme/index.css
@@ -2,6 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+/* SCROLLBAR */
+/* width */
+::-webkit-scrollbar {
+  width: 1rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color:  rgb(0, 106, 255); 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(48, 90, 148); 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(31, 41, 55); 
+}
+
+
 /** Ionic CSS Variables **/
 :root {
     /** primary **/
