--- a/src/theme/index.css
+++ b/src/theme/index.css
@@ -182,9 +182,9 @@
       --ion-text-color: #ffffff;
       --ion-text-color-rgb: 255,255,255;
   
-      --ion-color-step-50: #0d0d0d;
-      --ion-color-step-100: #1a1a1a;
-      --ion-color-step-150: #262626;
+      --ion-color-step-50: #000000;
+      --ion-color-step-100: #000000;
+      --ion-color-step-150: #2626268e;
       --ion-color-step-200: #333333;
       --ion-color-step-250: #404040;
       --ion-color-step-300: #4d4d4d;
@@ -221,15 +221,15 @@
   
     .md body {
       --ion-background-color: #000000;
-      --ion-background-color-rgb: 18,18,18;
+      --ion-background-color-rgb: 0,0,0;
   
       --ion-text-color: #ffffff;
       --ion-text-color-rgb: 255,255,255;
   
       --ion-border-color: #222222;
   
-      --ion-color-step-50: #1e1e1e;
-      --ion-color-step-100: #2a2a2a;
+      --ion-color-step-50: #000000;
+      --ion-color-step-100: #000000;
       --ion-color-step-150: #363636;
       --ion-color-step-200: #414141;
       --ion-color-step-250: #4d4d4d;
