--- a/src/theme/index.css
+++ b/src/theme/index.css
@@ -5,22 +5,28 @@
 /* SCROLLBAR */
 /* width */
 ::-webkit-scrollbar {
-  width: 1rem;
+  width: 0.9rem;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background-color:  rgb(0, 106, 255); 
+  background-color:  rgb(3, 38, 0); 
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgb(48, 90, 148); 
+  background: rgba(9, 172, 0, 0.579); 
+  border-radius: 50px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(31, 41, 55); 
+}
+@media only screen and (max-width: 762px) {
+  ::-webkit-scrollbar {
+    height: 0.5rem;
+  }
 }
 
 
